[tool.poetry]
name = "bcsa定位签到系统"
version = "0.1.0"
description = ""
authors = ["xcenweb"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.23.2"
fastapi = "^0.104.0"
sqlalchemy = "^2.0.22"
jinja2 = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
